--- a/.github/workflows/update-activity.yml
+++ b/.github/workflows/update-activity.yml
@@ -3,7 +3,7 @@ name: Waka Readme
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 23 * * *"
+    # - cron: "0 23 * * *"
 
 jobs:
   update-readme:
@@ -23,4 +23,4 @@ jobs:
           SHOW_TIME: true
           SHOW_TOTAL: true
           LANG_COUNT: 5
-          COMMIT_MESSAGE: "chore(stats): update weekly coding time"
+          #COMMIT_MESSAGE: "chore(stats): update weekly coding time"
